Update SearchByContent Response/Result: Add Info
