# src/views/openapi.yaml
@@ -79,14 +79,14 @@ paths:
       summary: Search by Content
       operationId: searchByContent
       parameters:
-        - $ref: '#/components/parameters/SearchKeyParam'
+        - $ref: '#/components/parameters/SearchKeyByContentParam'
       responses:
         '200':
           description: Return
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DefaultResponse'
+                $ref: '#/components/schemas/SearchByContentResponse'
         'default':
           description: Return with error
           content:
@@ -105,6 +105,22 @@ components:
           description: Search Result Collection
           items:
             $ref: '#/components/schemas/ResultObject'
+        searchCount:
+          type: integer
+          description: Search Result Count
+          example: 1
+    SearchByContentResponse:
+      type: object
+      properties:
+        searchKey:
+          type: string
+          description: Search Key Request
+          example: obama
+        results:
+          type: array
+          description: Search Result Collection
+          items:
+            $ref: '#/components/schemas/ResultByContentObject'
         searchCount:
           type: integer
           description: Search Result Count
@@ -137,8 +153,56 @@ components:
           type: string
           description: "Parent path"
           example: public/file-finder/folder_peoples/folder_presidents
+    ResultByContentObject:
+      type: object
+      description: Search by Content Result
+      properties:
+        idx:
+          type: integer
+          description: Index 
+          example: 1
+        isDir:
+          type: boolean
+          description: Is directory
+          example: false
+        shortPath:
+          type: string
+          description: File Short Path (We hide the Fullpath for security reason)
+          example: public/file-finder/folder_peoples/folder_presidents/file_us.txt
+        extension:
+          type: string
+          description: File Extention
+          example: txt
+        fileSize:
+          type: integer
+          description: File Size
+          example: 6713
+        parentPath:
+          type: string
+          description: "Parent path"
+          example: public/file-finder/folder_peoples/folder_presidents
+        info:
+          type: object
+          properties:
+            firstPos:
+              type: integer
+              description: First Search Key Position
+              example: 6580
+            firstStr:
+              type: string
+              description: Part of Search Result 
+              example: ...Obama,http://en.wikipedia.org/wiki/Barack_Obama,20
   parameters:
     SearchKeyParam:
+      in: query
+      name: s
+      description: Search Key
+      required: true
+      allowEmptyValue: false
+      schema:
+        type: string
+      example: folder
+    SearchKeyByContentParam:
       in: query
       name: s
       description: Search Key
